tests/samples/invalid/missing_semicolon_brace.pn
fn main()
{
	var x = 10
}
